# mdbook-tailwindcss

./: Cargo.toml  README.md
examples/apples/: book.toml
examples/apples/src/: chapter_1.md
src/: main.rs
